--- a/application/modules/back/views/scripts/activities/edit.phtml
+++ b/application/modules/back/views/scripts/activities/edit.phtml
@@ -1,5 +1,5 @@
 <?php
-$this->headTitle(_('HEAD_TITLE_HOME') . ' | ');
+$this->headTitle(_('HEAD_TITLE_ACTIVITY') . ' | ');
 $formActivityEdit = $this->formActivityEdit;
 $formFileUploader = $this->formFileUploader;
 $this->headLink()->appendStylesheet($this->buildDesignUrl('_common/css/onglets.css'));
