--- a/application/modules/back/views/scripts/products/edit-category.phtml
+++ b/application/modules/back/views/scripts/products/edit-category.phtml
@@ -8,6 +8,9 @@ $this->headLink()->appendStylesheet($this->buildDesignUrl('products/css/edit-cat
 ?>
 
 <div class="page page_cms">
+
+    <p class="back"><a href="/products/"><?= _('GLOBAL_BACK_SIMPLE') ?></a></p>
+
     <h2>
         <?= _('PRODUCTS_EDIT_CATEGORIE_TITLE') ?>
         -
