--- a/public/design/front/default/products/css/room.css
+++ b/public/design/front/default/products/css/room.css
@@ -33,6 +33,10 @@
     margin-top: 30px;
 }
 
+#wrapper .products ul {
+    list-style-type: none;
+}
+
 #wrapper .products ul li {
     height: 200px;
     width: 903px;
