--- a/application/modules/front/views/scripts/activities/read.phtml
+++ b/application/modules/front/views/scripts/activities/read.phtml
@@ -9,7 +9,7 @@ $activity = $this->activity;
 
 
 <div class="activity page">
-    <p class="back"><a href="<?= $this->baseUrl(); ?>activity"><?= _('GLOBAL_BACK') ?></a></p>
+    <p class="back"><a href="<?= $this->baseUrl(); ?>activities"><?= _('GLOBAL_BACK') ?></a></p>
 
     <h2><?= $activity->title ?></h2>
 
