--- a/public/design/front/default/products/css/room.css
+++ b/public/design/front/default/products/css/room.css
@@ -74,7 +74,7 @@
     width: 100%;
     margin-top: 60px;
     text-shadow: 2px 2px 3px #000;
-    font-family: 'HelveticaNeueUltraLight';
+    font-family: 'HelveticaNeueUltraLight', 'Arial', 'sans-serif';
     /*color: #7A7B6D;*/
     /*    background-color: #D1D3BB;
 position: absolute;
