--- a/public/design/default/default/_common/css/global.css
+++ b/public/design/default/default/_common/css/global.css
@@ -15,7 +15,7 @@ body {
     background-color: #c3c5b0;
     height: 100%;
     color: #4B4C43;
-    font-family: 'Helvetica Neue', 'Arial', 'sans-serif';
+    font-family: 'HelveticaNeueLight', 'Arial', 'sans-serif';
     font-size: 12px;
     cursor: default;
 }
@@ -49,7 +49,7 @@ u {
 
 h1, h2, h3, h4, h5, h6 {
     /*font-weight: bold;*/
-    font-family: 'HelveticaNeueLight';
+    font-family: 'HelveticaNeueLight', 'Arial', 'sans-serif';
 }
 
 h1 a, h2 a, h3 a, h4 a, h5 a, h6 a {
@@ -58,14 +58,14 @@ h1 a, h2 a, h3 a, h4 a, h5 a, h6 a {
 
 h2 {
     font-size: 2em;
-    border-bottom: 1px dashed #4B4C43;
+    /*border-bottom: 1px dashed #4B4C43;*/
     padding-bottom: 5px;
     margin-bottom: 20px;
 }
 
 h4 {
     font-size: 1.5em;
-    border-bottom: 1px dashed #4B4C43;
+    /*border-bottom: 1px dashed #4B4C43;*/
     padding-bottom: 5px;
     margin-bottom: 20px;
 }
@@ -107,8 +107,8 @@ ul {
 
 #container #menu {
     float: left;
-    height: 27px;
-    line-height: 26px;
+    height: 35px;
+    line-height: 35px;
     width: 100%;
     background-color: #A5A794;
     border: 1px solid #5C5D52;
@@ -126,11 +126,11 @@ ul {
 
 #container #menu ul.main_menu li a {
     display: inline-block;
-    font-size: .9em;
+    font-size: 1em;
     padding: 0 8px;
     margin-right: -3px;
-    border-right: 1px dotted #7A7B6D;
-    color: #e6e8cf;
+    border-right: 1px solid #7A7B6D;
+    color: #30302B;
 }
 
 #container #menu ul.main_menu li.current a {
@@ -205,7 +205,7 @@ ul {
 /* •••••••••••••••••••••••••••••••••• */
 
 #container #wrapper .page {
-    background-color: #fff;
+    background-color: #E8EAD4;
     padding: 2% 3%;
     margin: 0 auto;
     width: 94%;
