--- a/public/design/default/default/_plugin/jquery-ui/css/style.css
+++ b/public/design/default/default/_plugin/jquery-ui/css/style.css
@@ -58,7 +58,7 @@
 .ui-widget input, .ui-widget select, .ui-widget textarea, .ui-widget button { font-family: Verdana,Arial,sans-serif; }
 .ui-widget-content { border: 1px solid #a4a781; background: #ffffff url(../img/ui-bg_flat_75_ffffff_40x100.png) 50% 50% repeat-x; color: #4b4b49; }
 .ui-widget-content a { color: #4b4b49; }
-.ui-widget-header { border: 1px solid #a4a781; background: #d1d3bb url(../img/ui-bg_flat_0_d1d3bb_40x100.png) 50% 50% repeat-x; color: #4b4b49; font-weight: bold; }
+.ui-widget-header { /*border: 1px solid #a4a781;*/ background: #d1d3bb url(../img/ui-bg_flat_0_d1d3bb_40x100.png) 50% 50% repeat-x; color: #4b4b49; font-weight: bold; }
 .ui-widget-header a { color: #4b4b49; }
 
 /* Interaction states
@@ -476,7 +476,7 @@ button.ui-button::-moz-focus-inner { border: 0; padding: 0; } /* reset extra pad
  *
  * http://docs.jquery.com/UI/Tabs#theming
  */
-.ui-tabs { position: relative; padding: .2em; zoom: 1; } /* position: relative prevents IE scroll bug (element with position: relative inside container with overflow: auto appear as "fixed") */
+.ui-tabs { position: relative; /*padding: .2em;*/ zoom: 1; } /* position: relative prevents IE scroll bug (element with position: relative inside container with overflow: auto appear as "fixed") */
 .ui-tabs .ui-tabs-nav { margin: 0; padding: .2em .2em 0; }
 .ui-tabs .ui-tabs-nav li { list-style: none; float: left; position: relative; top: 1px; margin: 0 .2em 1px 0; border-bottom: 0 !important; padding: 0; white-space: nowrap; }
 .ui-tabs .ui-tabs-nav li a { float: left; padding: .5em 1em; text-decoration: none; }
