--- a/public/design/front/default/activities/css/list.css
+++ b/public/design/front/default/activities/css/list.css
@@ -47,11 +47,12 @@
     background-color: #e8ead4;
     float: left;
     overflow: hidden;
-    width: 272px;
-    height: 150px;
+    width: 292px;
+    height: 170px;
     margin-bottom: 10px;
     margin-right: 10px;
-    padding: 10px;
+    position: relative;
+    background-position: 0 30%;
 }
 
 #wrapper .activities ul li:hover {
@@ -63,28 +64,24 @@
 }
 
 #wrapper .activities .left h3 {
-    margin-bottom: 15px;
     font-size: 1.3em;
-    font-weight: normal;
+    font-weight: bold;
+    color: #555;
 }
 
-#wrapper .activities .left p {
-    margin-bottom: 10px;
-    display: none;
+#wrapper .activities .left {
+    position: absolute;
+    bottom: 0;
+    right: 0;
+    background-color: #fff;
+    padding: 5px;
+    width: 282px;
+    text-align: right;
+    opacity: .7;
 }
 
-#wrapper .activities .left p a {
-    display: block;
-    height: 125px;
-    overflow: hidden;
-    width: 250px;
-}
-
-#wrapper .activities .right {
-    text-align: justify;
-    overflow: hidden;
-    height: 121px;
-    font-weight: normal;
+#wrapper .activities ul li:hover .left {
+    opacity: 1;
 }
 
 /* •••••••••••••••••••••••••••••••••• */
