--- a/public/design/front/default/news/css/list.css
+++ b/public/design/front/default/news/css/list.css
@@ -5,35 +5,57 @@
 }
 
 /* •••••••••••••••••••••••••••••••••• */
-#wrapper .spotlight {
+#wrapper ul {
+    list-style-type: none;
+}
+
+#wrapper ul li {
     box-shadow: 0 0 5px #555;
     border: 1px solid #888;
     padding: 10px;
     background-color: #e8ead4;
     overflow: hidden;
+    height: 110px;
+    margin-bottom: 20px;
 }
 
-#wrapper .spotlight .left {
+#wrapper ul li .left {
     width: 300px;
     margin-right: 20px;
     float: left;
+    height: 110px;
+    overflow: hidden;
+    position: relative;
+    border: 1px solid #555;
 }
 
-#wrapper .spotlight .right h3 {
+#wrapper ul li .left span.date {
+    position: absolute;
+    display: block;
+    bottom: 0;
+    background-color: #FFF;
+    padding: 2px;
+    font-weight: normal;
+    width:100%;
+    border-top: 1px solid #555;
+}
+
+#wrapper ul li .right h3 {
     margin-bottom: 15px;
     font-size: 2em;
     font-weight: normal;
 }
 
-#wrapper .spotlight .right {
-    width: 560px;
+#wrapper ul li .right {
+    width: 558px;
     text-align: justify;
     float: left;
     font-weight: normal;
 }
 
 /* •••••••••••••••••••••••••••••••••• */
-#wrapper .news {
+
+/*#wrapper .news {
     margin-top: 20px;
 }
 
@@ -42,16 +64,15 @@
 }
 
 #wrapper .news ul li {
-    /*box-shadow: 0 0 5px #555;*/
+    box-shadow: 0 0 5px #555;
     border: 1px solid #888;
     background-color: #e8ead4;
     float: left;
     overflow: hidden;
-    width: 272px;
-    height: 150px;
+    width: 292px;
+    height: 170px;
     margin-bottom: 10px;
     margin-right: 10px;
-    padding: 10px;
 }
 
 #wrapper .news ul li:hover {
@@ -65,7 +86,8 @@
 #wrapper .news .left h3 {
     margin-bottom: 15px;
     font-size: 1.3em;
-    font-weight: normal;
+    font-weight: bold;
+    text-align: right;
 }
 
 #wrapper .news .left p {
@@ -85,6 +107,6 @@
     overflow: hidden;
     height: 121px;
     font-weight: normal;
-}
+}*/
 
 /* •••••••••••••••••••••••••••••••••• */
