--- a/application/modules/back/views/scripts/activities/partial/illustration.phtml
+++ b/application/modules/back/views/scripts/activities/partial/illustration.phtml
@@ -20,7 +20,7 @@ $idActivite = $this->idActivite;
                 600
             );
             ?>"
-           rel="shadowbox[picture]">
+           rel="colorbox">
             <img src="<?=
                 $this->displayImage(
                     $illustration->filename,
