--- a/application/modules/back/views/scripts/index/carrousel-list.phtml
+++ b/application/modules/back/views/scripts/index/carrousel-list.phtml
@@ -34,7 +34,7 @@ $liste = $this->carrousel;
         <tr>
             <td class="picture">
                 <a href="<?= $this->displayImage($ligne->filename, Llv_Constant_File_Category::CARROUSEL, 800, 600); ?>"
-                   rel="shadowbox[picture]">
+                   rel="colorbox">
                     <img
                         src="<?= $this->displayImage($ligne->filename, Llv_Constant_File_Category::CARROUSEL, 100, 75); ?>"/>
                 </a>
