--- a/application/modules/back/views/scripts/products/partial/illustration-category.phtml
+++ b/application/modules/back/views/scripts/products/partial/illustration-category.phtml
@@ -17,7 +17,7 @@ $categorie = $this->categorie;
                 600
             );
             ?>"
-           rel="shadowbox[picture]">
+           rel="colorbox">
             <img src="<?=
                 $this->displayImage(
                     $categorie->illustration->filename,
