--- a/application/modules/back/views/scripts/products/partial/illustration-product.phtml
+++ b/application/modules/back/views/scripts/products/partial/illustration-product.phtml
@@ -21,7 +21,7 @@ $illustrations = $product->illustrations;
                 600
             );
             ?>"
-           rel="shadowbox[picture]">
+           rel="colorbox">
             <img src="<?=
                 $this->displayImage(
                     $illustration->filename,
