--- a/application/modules/front/layouts/scripts/layout.phtml
+++ b/application/modules/front/layouts/scripts/layout.phtml
@@ -32,6 +32,9 @@ $this->headLink()->prependStylesheet($this->baseUrl() . 'public/design/default/d
 /** ShadowBox */
 $this->headScript()->appendFile($this->baseUrl() . 'public/design/default/default/_plugin/shadowbox/shadowbox.js');
 $this->headLink()->prependStylesheet($this->baseUrl() . 'public/design/default/default/_plugin/shadowbox/shadowbox.css');
+/** Colorbox */
+$this->headScript()->appendFile($this->baseUrl() . 'public/design/default/default/_plugin/colorbox/jquery.colorbox.js');
+$this->headLink()->prependStylesheet($this->baseUrl() . 'public/design/default/default/_plugin/colorbox/colorbox.css');
 
 ?>
 
