--- a/application/modules/front/views/scripts/products/partial/product/photos.phtml
+++ b/application/modules/front/views/scripts/products/partial/product/photos.phtml
@@ -20,7 +20,7 @@ $product = $this->product;
                     1000,
                     9999
                 );
-                ?>" rel="shadowbox[picture]">
+                ?>" rel="colorbox">
                 <img
                     src="<?=
                         $this->displayImage(
