--- a/public/design/default/default/_common/css/global.css
+++ b/public/design/default/default/_common/css/global.css
@@ -15,7 +15,7 @@ body {
     background-color: #c3c5b0;
     height: 100%;
     color: #4B4C43;
-    font-family: 'HelveticaNeueLight', 'Arial', 'sans-serif';
+    font-family: 'Arial', 'sans-serif';
     font-size: 12px;
     cursor: default;
 }
