--- a/public/design/front/default/products/css/room.css
+++ b/public/design/front/default/products/css/room.css
@@ -30,7 +30,7 @@
 
 /* •••••••••••••••••••••••••••••••••• */
 #wrapper .products {
-    margin-top: 30px;
+    /*margin-top: 30px;*/
 }
 
 #wrapper .products ul {
