--- a/application/modules/back/layouts/scripts/layout.phtml
+++ b/application/modules/back/layouts/scripts/layout.phtml
@@ -29,6 +29,9 @@ $this->headLink()->prependStylesheet($this->baseUrl() . 'public/design/default/d
 /** ShadowBox */
 $this->headScript()->appendFile($this->baseUrl() . 'public/design/default/default/_plugin/shadowbox/shadowbox.js');
 $this->headLink()->prependStylesheet($this->baseUrl() . 'public/design/default/default/_plugin/shadowbox/shadowbox.css');
+/** Colorbox */
+$this->headScript()->appendFile($this->baseUrl() . 'public/design/default/default/_plugin/colorbox/jquery.colorbox.js');
+$this->headLink()->prependStylesheet($this->baseUrl() . 'public/design/default/default/_plugin/colorbox/colorbox.css');
 /** Textarea UI */
 $this->headScript()->appendFile($this->baseUrl() . 'public/design/' . $module . '/default/_common/js/js.niceedit.js');
 
