--- a/application/modules/front/views/scripts/activities/read.phtml
+++ b/application/modules/front/views/scripts/activities/read.phtml
@@ -1,10 +1,10 @@
 <?php
 //$module = Llv_Context_Application::getInstance()->getActiveModule();
-$this->headTitle(_('HEAD_TITLE_ACTIVITY') . ' | ');
-/**  */
 $this->headLink()->appendStylesheet($this->buildDesignUrl('activities/css/element.css'));
 $this->headScript()->appendFile($this->buildDesignUrl('activities/js/list.js'));
 $activity = $this->activity;
+/**  */
+$this->headTitle($activity->title.' | ' . _('HEAD_TITLE_ACTIVITY') . ' | ');
 ?>
 
 
@@ -31,7 +31,7 @@ $activity = $this->activity;
                     800,
                     9999
                 );
-                ?>" rel="shadowbox[picture]">
+                ?>" rel="colorbox">
                 <img
                     src="<?=
                         $this->displayImage(
