--- a/application/modules/front/views/scripts/products/partial/category.phtml
+++ b/application/modules/front/views/scripts/products/partial/category.phtml
@@ -15,7 +15,7 @@ $this->headTitle($category->title . ' | ');
             600
         );
         ?>"
-           rel="shadowbox[picture]">
+           rel="colorbox">
             <img src="<?=
             $this->displayImage(
                 $category->illustration->filename,
