--- a/application/modules/back/views/scripts/news/edit.phtml
+++ b/application/modules/back/views/scripts/news/edit.phtml
@@ -7,6 +7,8 @@ $this->headLink()->appendStylesheet($this->buildDesignUrl('news/css/index.css'))
 ?>
 
 <div class="page page_cms">
+
+    <p class="back"><a href="/news/"><?= _('GLOBAL_BACK_SIMPLE') ?></a></p>
     <h2>
         <?= _('NEWS_EDIT_TITLE') ?>
     </h2>
