--- a/application/modules/back/views/scripts/activities/edit.phtml
+++ b/application/modules/back/views/scripts/activities/edit.phtml
@@ -7,6 +7,8 @@ $this->headLink()->appendStylesheet($this->buildDesignUrl('activities/css/index.
 ?>
 
 <div class="page page_cms">
+
+    <p class="back"><a href="/activities/"><?= _('GLOBAL_BACK_SIMPLE') ?></a></p>
     <h2>
         <?= _('ACTIVITY_EDIT_TITLE') ?>
     </h2>
