--- a/application/modules/front/views/scripts/products/partial/product/onglets.phtml
+++ b/application/modules/front/views/scripts/products/partial/product/onglets.phtml
@@ -8,9 +8,9 @@
     <li>
         <a href="#jq-prices"><?php echo _('PRODUCTS_ONGLET_PRIX'); ?></a>
     </li>
-    <!--    <li>-->
-    <!--        <a href="#jq-goldbook">--><?php //echo _('NEWS_EDIT_TABS_PICTURES'); ?><!--</a>-->
-    <!--    </li>-->
+        <li>
+            <a href="#jq-goldbook"><?php echo _('PRODUCTS_ONGLET_GOLDBOOK'); ?></a>
+        </li>
     <li>
         <a href="#jq-reservation"><?php echo _('PRODUCTS_ONGLET_RESERVER'); ?></a>
     </li>
