--- a/application/modules/front/views/scripts/partial/menu.phtml
+++ b/application/modules/front/views/scripts/partial/menu.phtml
@@ -20,6 +20,11 @@ $items['gite'] = array(
     'label'      => _('GLOBAL_MENU_GITE')
 );
 /** Liste des actualités */
+$items['disponibilites'] = array(
+    'controller' => 'availabilities',
+    'label'      => _('GLOBAL_MENU_DISPONIBILITES')
+);
+/** Liste des actualités */
 $items['news'] = array(
     'controller' => 'news',
     'label'      => _('GLOBAL_MENU_NEWS')
