--- a/application/modules/front/views/scripts/partial/footer.phtml
+++ b/application/modules/front/views/scripts/partial/footer.phtml
@@ -3,7 +3,9 @@
     |
     <?= _('FOOTER_CREDITS'); ?> <a href="http://www.aroy.fr">Alexandre ROY</a>
     |
-    <a href="<?= $this->baseUrl();?>partners/"><?= _('FOOTER_PARTENAIRES'); ?></a>
+    <a href="<?= $this->url(array('controller'=> 'partners'));?>"><?= _('FOOTER_PARTENAIRES'); ?></a>
+    |
+    <a href="<?= $this->url(array('controller'=> 'site-plan'));?>"><?= _('GLOBAL_MENU_PLAN'); ?></a>
 </p>
 
 <p>
@@ -15,3 +17,4 @@
     <?= _('GLOBAL_COORDONNEES_MOBILE_LABEL'); ?>
     <?= _('GLOBAL_COORDONNEES_MOBILE'); ?>
 </p>
+
