--- a/public/design/default/default/_common/css/global.css
+++ b/public/design/default/default/_common/css/global.css
@@ -56,7 +56,7 @@ h1 a, h2 a, h3 a, h4 a, h5 a, h6 a {
     font-weight: normal;
 }
 
-h2 {
+h1 {
     font-size: 2em;
     /*border-bottom: 1px dashed #4B4C43;*/
     padding-bottom: 5px;
@@ -95,7 +95,7 @@ ul {
     background-image: url(../img/header.png);
 }
 
-#container #header h1 a {
+#container #header h2 a {
     display: block;
     height: 180px;
     width: 1000px;
@@ -248,11 +248,15 @@ ul {
 
 #container #footer {
     float: left;
-    height: 25px;
+    min-height: 25px;
     padding: 1%;
     width: 98%;
     color: #D1D3BB;
     text-align: center;
+}
+
+#container #footer .fb-like {
+    margin:0 auto;
 }
 
 /* •••••••••••••••••••••••••••••••••• */
