--- a/application/modules/front/views/scripts/partners/index.phtml
+++ b/application/modules/front/views/scripts/partners/index.phtml
@@ -2,6 +2,7 @@
 $this->headTitle(_('HEAD_TITLE_PARTNERS') . ' | ');
 /**  */
 $this->headLink()->appendStylesheet($this->buildDesignUrl('partners/css/index.css'));
+$this->headScript()->appendFile($this->buildDesignUrl('partners/js/index.js'));
 $page = $this->page;
 ?>
 
