--- a/application/modules/front/views/scripts/availabilities/index.phtml
+++ b/application/modules/front/views/scripts/availabilities/index.phtml
@@ -2,7 +2,7 @@
 /**  */
 $this->headLink()->appendStylesheet($this->buildDesignUrl('availabilities/css/index.css'));
 
-$this->headTitle(_('DISPONIBILITES_TITRE') . ' | ');
+$this->headTitle(_('HEAD_TITLE_DISPONIBILITES') . ' | ');
 ?>
 <div class="page">
     <h1><?= _('DISPONIBILITES_TITRE') ?></h1>
