--- a/application/modules/front/views/scripts/partial/footer.phtml
+++ b/application/modules/front/views/scripts/partial/footer.phtml
@@ -3,9 +3,9 @@
     |
     <?= _('FOOTER_CREDITS'); ?> <a href="http://www.aroy.fr">Alexandre ROY</a>
     |
-    <a href="<?= $this->url(array('controller'=> 'partners'));?>"><?= _('FOOTER_PARTENAIRES'); ?></a>
+    <a href="<?= $this->url(array('controller'=> 'partners'), null, true);?>"><?= _('FOOTER_PARTENAIRES'); ?></a>
     |
-    <a href="<?= $this->url(array('controller'=> 'site-plan'));?>"><?= _('GLOBAL_MENU_PLAN'); ?></a>
+    <a href="<?= $this->url(array('controller'=> 'site-plan'), null, true);?>"><?= _('GLOBAL_MENU_PLAN'); ?></a>
 </p>
 
 <p>
