--- a/public/design/front/default/index/css/index.css
+++ b/public/design/front/default/index/css/index.css
@@ -1,5 +1,14 @@
 /* •••••••••••••••••••••••••••••••••• */
 
+h1 {
+    font-size: 1.5em;
+    /*border-bottom: 1px dashed #4B4C43;*/
+    padding-bottom: 5px;
+    margin-bottom: 20px;
+}
+
+/* •••••••••••••••••••••••••••••••••• */
+
 #wrapper .presentation {
     float: left;
     /*display: inline-block;*/
