--- a/application/modules/front/views/scripts/availabilities/index.phtml
+++ b/application/modules/front/views/scripts/availabilities/index.phtml
@@ -4,26 +4,36 @@ $this->headLink()->appendStylesheet($this->buildDesignUrl('availabilities/css/in
 
 $this->headTitle(_('HEAD_TITLE_DISPONIBILITES') . ' | ');
 ?>
-<div class="page">
+<div class="page availability">
     <h1><?= _('DISPONIBILITES_TITRE') ?></h1>
 
-    <?=
-    $this->partial(
-        'availabilities/partial/rooms.phtml',
-        array(
-             'products'=> $this->products,
-             'id_category' => 1
-        )
-    );
-    ?>
-
-    <?=
-    $this->partial(
-        'availabilities/partial/rooms.phtml',
-        array(
-             'products'=> $this->products,
-             'id_category' => 2
-        )
-    );
-    ?>
+    <div class="jq-tabs onglets">
+            <ul id="onglets-navigation">
+            <?php foreach ($this->products as $product): ?>
+            <li>
+                <a href="#jq-room<?= $product->id?>"><?= $product->title ?></a>
+            </li>
+            <?php endforeach; ?>
+        </ul>
+        <?php foreach ($this->products as $product): ?>
+        <div id="jq-room<?= $product->id?>" class="availability">
+            <?= $product->availability?>
+            <p>
+                <a href="<?=
+                    $this->url(
+                        array(
+                             'controller' => 'products',
+                             'action'     => 'location',
+                             'set'        => $product->url
+                        ),
+                        null,
+                        false
+                    );
+                    ?>#jq-reservation">
+                    <?= _('DISPONIBILITES_DEMANDE_RESERVATION') ?>
+                </a>
+            </p>
+        </div>
+        <?php endforeach; ?>
+    </div>
 </div>
