--- a/public/design/front/default/availabilities/css/index.css
+++ b/public/design/front/default/availabilities/css/index.css
@@ -54,6 +54,10 @@
 }
 
 /* ••••••••••••••••• */
+#wrapper #page .availability .onglets ul#onglets-navigation li {
+    font-size: .9em;
+}
+
 #wrapper .availability p {
     text-align: right;
 }
