--- a/application/modules/front/views/scripts/site-plan/index.phtml
+++ b/application/modules/front/views/scripts/site-plan/index.phtml
@@ -25,7 +25,7 @@ $chalet = $this->chalet;
                     <a href="<?= $this->url(
                         array(
                              'controller'=> 'products',
-                             'action'    => 'room',
+                             'action'    => 'location',
                              'type'      => 'guesthouse',
                              'set'      => $room->url
                         )
@@ -49,7 +49,7 @@ $chalet = $this->chalet;
                     <a href="<?= $this->url(
                         array(
                              'controller'=> 'products',
-                             'action'    => 'room',
+                             'action'    => 'location',
                              'type'      => 'chalet',
                              'set'      => $room->url
                         )
